[package]
name = "blimp_comm"
version = "0.1.0"
edition = "2021"

[dependencies]
quinn = "0.11.6"
tokio = { version = "1.41.1", features = ["macros"] }
blimp_onboard_software = { path = "deps/blimp_onboard_software" }
serde = { version = "1.0.215", features = ["serde_derive"] }
postcard = { version = "1.1.1", features = ["use-std"] }
